--- a/index.html
+++ b/index.html
@@ -81,11 +81,13 @@
         <div class="five">
             <div class="col-1"></div>
             <div class="col-4">
-                <li><a href="#">ALL</a></li>
-                <li><a href="#">PRINT TEMPLATE</a></li>
-                <li><a href="#">WEB TEMPLATE</a></li>
-                <li><a href="#">USER INTERFACE</a></li>
-                <li><a href="#">MOCK-UP</a></li>
+                <nav>
+                    <li><a href="#">ALL</a></li>
+                    <li><a href="#">PRINT TEMPLATE</a></li>
+                    <li><a href="#">WEB TEMPLATE</a></li>
+                    <li><a href="#">USER INTERFACE</a></li>
+                    <li><a href="#">MOCK-UP</a></li>
+                </nav>
             </div>
             <div class="col-1"></div>
         </div>
