--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <div class="col-1"></div>
             <div class="col-4">
                 <nav>
-                    <ul>
+                    <ul class="row">
                         <li class="all"><a href="#">ALL</a></li>
                         <li><a href="#">PRINT TEMPLATE</a></li>
                         <li><a href="#">WEB TEMPLATE</a></li>
