--- a/index.html
+++ b/index.html
@@ -94,24 +94,24 @@
             <div class="col-1"></div>
         </div>
         <div class="six">
-            <div class="col-1"></div>
-            <div class="col-1">
+            <aside class="col-1"></aside>
+            <aside class="col-1">
                 <img src="/afanasyev_official/images/block2.png">
                 <img src="/afanasyev_official/images/block2.png">
-            </div>
-            <div class="col-1">
+            </aside>
+            <aside class="col-1">
                 <img src="/afanasyev_official/images/block2.png">
                 <img src="/afanasyev_official/images/block2.png">
-            </div>
-            <div class="col-1">
+            </aside>
+            <aside class="col-1">
                 <img src="/afanasyev_official/images/block2.png">
                 <img src="/afanasyev_official/images/block2.png">
-            </div>
-            <div class="col-1">
+            </aside>
+            <aside class="col-1">
                 <img src="/afanasyev_official/images/block2.png">
                 <img src="/afanasyev_official/images/block2.png">
-            </div>
-            <div class="col-1"></div>
+            </aside>
+            <aside class="col-1"></aside>
         </div>
         <footer>
             <div class="container">
