--- a/index.html
+++ b/index.html
@@ -41,46 +41,46 @@
         </section>
         <section class="two">
             <div class="container">
-                <div class="col-1"></div>
-                <div class="col-2">
+                <aside class="col-1"></aside>
+                <aside class="col-2">
                     <h1><b>DO YOU KNOW WE CAN PROVIDE FOR YOU?</b></h1>
                     <h6>Lorem ipsum dolor sit amet, consectetur adipis cing elit, set do eius-mod tempor incididunt ut labore et. ectetur adig ipis cing elit, sed do eiusmod tempor incididunt</h6>
-                </div>
-                <div class="col-1">
+                </aside>
+                <aside class="col-1">
                     <img src="/afanasyev_official/images/icon-settings.png">
                     <h4>Management</h4>
                     <h6>Lorem ipsum dolor sit amet, consectetur adipis cing elit, set do eius-mod tempor incididunt ut labore et. ectetur adig ipis cing elit, sed do eiusmod tempor incididunt</h6>
                     <img src="/afanasyev_official/images/icon-diamond.png">
                     <h4>Logo / Branding</h4>
                     <h6>Lorem ipsum dolor sit amet, consectetur adipis cing elit, set do eius-mod tempor incididunt ut labore et. ectetur adig ipis cing elit, sed do eiusmod tempor incididunt</h6>
-                </div>
-                <div class="col-1">
+                </aside>
+                <aside class="col-1">
                     <img src="/afanasyev_official/images/icon-pencil.png">
                     <h4>UI / UX Design</h4>
                     <h6>Lorem ipsum dolor sit amet, consectetur adipis cing elit, set do eius-mod tempor incididunt ut labore et. ectetur adig ipis cing elit, sed do eiusmod tempor incididunt</h6>
                     <img src="/afanasyev_official/images/icon-truck.png">
                     <h4>Animation</h4>
                     <h6>Lorem ipsum dolor sit amet, consectetur adipis cing elit, set do eius-mod tempor incididunt ut labore et. ectetur adig ipis cing elit, sed do eiusmod tempor incididunt</h6>
-                </div>
-                <div class="col-1"></div>
+                </aside>
+                <aside class="col-1"></aside>
             </div>
         </section>
-        <div class="three">
-            <div class="col-1"></div>
-            <div class="col-4"></div>
-            <div class="col-1"></div>
-        </div>
-        <div class="four">
-            <div class="col-1"></div>
-            <div class="col-4">
+        <section class="three">
+            <aside class="col-1"></aside>
+            <aside class="col-4"></aside>
+            <aside class="col-1"></aside>
+        </section>
+        <section class="four">
+            <aside class="col-1"></aside>
+            <aside class="col-4">
                 <h1><b>FEATURE PRODUCTS</b></h1>
                 <h6>Lorem ipsum dolor sit amet, consectetur adipis cing elit, set do eius-mod tempor incididunt ut labore et.</h6>
-            </div>
-            <div class="col-1"></div>
-        </div>
-        <div class="five">
-            <div class="col-1"></div>
-            <div class="col-4">
+            </aside>
+            <aside class="col-1"></aside>
+        </section>
+        <section class="five">
+            <aside class="col-1"></aside>
+            <aside class="col-4">
                 <nav>
                     <ul class="row">
                         <li class="all"><a href="#">ALL</a></li>
@@ -90,10 +90,10 @@
                         <li><a href="#">MOCK-UP</a></li>
                     </ul>
                 </nav>
-            </div>
-            <div class="col-1"></div>
-        </div>
-        <div class="six">
+            </aside>
+            <aside class="col-1"></aside>
+        </section>
+        <section class="six">
             <aside class="col-1"></aside>
             <aside class="col-1">
                 <img src="/afanasyev_official/images/block2.png">
@@ -112,7 +112,7 @@
                 <img src="/afanasyev_official/images/block2.png">
             </aside>
             <aside class="col-1"></aside>
-        </div>
+        </section>
         <footer>
             <div class="container">
                 <div class="col-5">
