--- a/agnecy.html
+++ b/agnecy.html
@@ -11,19 +11,20 @@
     <body>
         <header>
             <div class="container">
-                <nav>
-                    <ul class="row">
-                        <li><a href="#">HOME</a></li>
-                        <li><a href="#">PORTFOLIO</a></li>
-                        <li><a href="#">ABOUT US</a></li>
-                        <li><a href="#">CONTACT</a></li>
-                    </ul>
-                </nav>
+                <div class="col-5">
+                    <nav>
+                        <ul class="row">
+                            <li><a href="#">HOME</a></li>
+                            <li><a href="#">PORTFOLIO</a></li>
+                            <li><a href="#">ABOUT US</a></li>
+                            <li><a href="#">CONTACT</a></li>
+                        </ul>
+                    </nav>
+                </div>
             </div>
         </header>
         <section class="one">
             <div class="container">
-                <div class="col-1"></div>
                 <div class="col-2">
                     <h1><b>OUR STRONG ORGANAISATION</b></h1>
                     <h6>Lorem ipsum dolor sit amet, consectetur adipis cing elit, set do eius-mod tempor incididunt ut labore et. ectetur adig ipis cing elit, sed do eiusmod tempor incididunt</h6>
@@ -32,12 +33,10 @@
                 <div class="col-2">
                     <img src="/afanasyev_official/images/block-video.png">
                 </div>
-                <div class="col-1"></div>
             </div>
         </section>
         <section class="two">
             <div class="container">
-                <aside class="col-1"></aside>
                 <aside class="col-2">
                     <h1><b>DO YOU KNOW WE CAN PROVIDE FOR YOU?</b></h1>
                     <h6>Lorem ipsum dolor sit amet, consectetur adipis cing elit, set do eius-mod tempor incididunt ut labore et. ectetur adig ipis cing elit, sed do eiusmod tempor incididunt</h6>
@@ -58,7 +57,6 @@
                     <h4>Animation</h4>
                     <h6>Lorem ipsum dolor sit amet, consectetur adipis cing elit, set do eius-mod tempor incididunt ut labore et. ectetur adig ipis cing elit, sed do eiusmod tempor incididunt</h6>
                 </aside>
-                <aside class="col-1"></aside>
             </div>
         </section>
         <section class="three">
