--- a/agnecy.html
+++ b/agnecy.html
@@ -23,58 +23,41 @@
                 </div>
             </div>
         </header>
-        <section class="one">
-            <div class="container">
-                <div class="col-2">
-                    <h1><b>OUR STRONG ORGANAISATION</b></h1>
-                    <h6>Lorem ipsum dolor sit amet, consectetur adipis cing elit, set do eius-mod tempor incididunt ut labore et. ectetur adig ipis cing elit, sed do eiusmod tempor incididunt</h6>
-                    <a href="#" class="button1">Contact Us</a>
-                </div>
-                <div class="col-2">
-                    <img src="/afanasyev_official/images/block-video.png">
-                </div>
+        <section class="about">
+            <div class="col-1">
+                <h1><b>OUR STRONG ORGANAISATION</b></h1>
+                <h6>Lorem ipsum dolor sit amet, consectetur adipis cing elit, set do eius-mod tempor incididunt ut labore et. ectetur adig ipis cing elit, sed do eiusmod tempor incididunt</h6>
+                <a href="#" class="button1">Contact Us</a>
             </div>
         </section>
-        <section class="two">
-            <div class="container">
-                <aside class="col-2">
-                    <h1><b>DO YOU KNOW WE CAN PROVIDE FOR YOU?</b></h1>
-                    <h6>Lorem ipsum dolor sit amet, consectetur adipis cing elit, set do eius-mod tempor incididunt ut labore et. ectetur adig ipis cing elit, sed do eiusmod tempor incididunt</h6>
-                </aside>
-                <aside class="col-1">
-                    <img src="/afanasyev_official/images/icon-settings.png">
-                    <h4>Management</h4>
-                    <h6>Lorem ipsum dolor sit amet, consectetur adipis cing elit, set do eius-mod tempor incididunt ut labore et. ectetur adig ipis cing elit, sed do eiusmod tempor incididunt</h6>
-                    <img src="/afanasyev_official/images/icon-diamond.png">
-                    <h4>Logo / Branding</h4>
-                    <h6>Lorem ipsum dolor sit amet, consectetur adipis cing elit, set do eius-mod tempor incididunt ut labore et. ectetur adig ipis cing elit, sed do eiusmod tempor incididunt</h6>
-                </aside>
-                <aside class="col-1">
-                    <img src="/afanasyev_official/images/icon-pencil.png">
-                    <h4>UI / UX Design</h4>
-                    <h6>Lorem ipsum dolor sit amet, consectetur adipis cing elit, set do eius-mod tempor incididunt ut labore et. ectetur adig ipis cing elit, sed do eiusmod tempor incididunt</h6>
-                    <img src="/afanasyev_official/images/icon-truck.png">
-                    <h4>Animation</h4>
-                    <h6>Lorem ipsum dolor sit amet, consectetur adipis cing elit, set do eius-mod tempor incididunt ut labore et. ectetur adig ipis cing elit, sed do eiusmod tempor incididunt</h6>
-                </aside>
+        <section class="service">
+            <div class="col-2">
+                <h1><b>DO YOU KNOW WE CAN PROVIDE FOR YOU?</b></h1>
+                <h6>Lorem ipsum dolor sit amet, consectetur adipis cing elit, set do eius-mod tempor incididunt ut labore et. ectetur adig ipis cing elit, sed do eiusmod tempor incididunt</h6>
+            </div>
+            <div class="col-1">
+                <img src="/afanasyev_official/images/icon-settings.png">
+                <h4>Management</h4>
+                <h6>Lorem ipsum dolor sit amet, consectetur adipis cing elit, set do eius-mod tempor incididunt ut labore et. ectetur adig ipis cing elit, sed do eiusmod tempor incididunt</h6>
+                <img src="/afanasyev_official/images/icon-diamond.png">
+                <h4>Logo / Branding</h4>
+                <h6>Lorem ipsum dolor sit amet, consectetur adipis cing elit, set do eius-mod tempor incididunt ut labore et. ectetur adig ipis cing elit, sed do eiusmod tempor incididunt</h6>
+            </div>
+            <div class="col-1">
+                <img src="/afanasyev_official/images/icon-pencil.png">
+                <h4>UI / UX Design</h4>
+                <h6>Lorem ipsum dolor sit amet, consectetur adipis cing elit, set do eius-mod tempor incididunt ut labore et. ectetur adig ipis cing elit, sed do eiusmod tempor incididunt</h6>
+                <img src="/afanasyev_official/images/icon-truck.png">
+                <h4>Animation</h4>
+                <h6>Lorem ipsum dolor sit amet, consectetur adipis cing elit, set do eius-mod tempor incididunt ut labore et. ectetur adig ipis cing elit, sed do eiusmod tempor incididunt</h6>
             </div>
         </section>
-        <section class="three">
-            <aside class="col-1"></aside>
-            <aside class="col-4"></aside>
-            <aside class="col-1"></aside>
-        </section>
-        <section class="four">
-            <aside class="col-1"></aside>
-            <aside class="col-4">
+        <section class="products">
+            <section class="prodtop">
                 <h1><b>FEATURE PRODUCTS</b></h1>
                 <h6>Lorem ipsum dolor sit amet, consectetur adipis cing elit, set do eius-mod tempor incididunt ut labore et.</h6>
-            </aside>
-            <aside class="col-1"></aside>
-        </section>
-        <section class="five">
-            <aside class="col-1"></aside>
-            <aside class="col-4">
+            </section>
+            <section class="prodmenu">
                 <nav>
                     <ul class="row">
                         <li class="all"><a href="#">ALL</a></li>
@@ -84,28 +67,49 @@
                         <li><a href="#">MOCK-UP</a></li>
                     </ul>
                 </nav>
-            </aside>
-            <aside class="col-1"></aside>
+            </section>
+            <section class="prod">
+                <aside class="col-1">
+                    <img src="/afanasyev_official/images/block2.png">
+                    <img src="/afanasyev_official/images/block2.png">
+                </aside>
+                <aside class="col-1">
+                    <img src="/afanasyev_official/images/block2.png">
+                    <img src="/afanasyev_official/images/block2.png">
+                </aside>
+                <aside class="col-1">
+                    <img src="/afanasyev_official/images/block2.png">
+                    <img src="/afanasyev_official/images/block2.png">
+                </aside>
+                <aside class="col-1">
+                    <img src="/afanasyev_official/images/block2.png">
+                    <img src="/afanasyev_official/images/block2.png">
+                </aside>
+            </section>
         </section>
-        <section class="six">
-            <aside class="col-1"></aside>
-            <aside class="col-1">
-                <img src="/afanasyev_official/images/block2.png">
-                <img src="/afanasyev_official/images/block2.png">
-            </aside>
-            <aside class="col-1">
-                <img src="/afanasyev_official/images/block2.png">
-                <img src="/afanasyev_official/images/block2.png">
-            </aside>
-            <aside class="col-1">
-                <img src="/afanasyev_official/images/block2.png">
-                <img src="/afanasyev_official/images/block2.png">
-            </aside>
-            <aside class="col-1">
-                <img src="/afanasyev_official/images/block2.png">
-                <img src="/afanasyev_official/images/block2.png">
-            </aside>
-            <aside class="col-1"></aside>
+        <section class="team">
+            <div class="col-1">
+
+            </div>
+            <div class="col-2">
+
+            </div>
+        </section>
+        <section class="subscribe">
+            <div class="col-2">
+
+            </div>
+            <div class="col-4">
+
+            </div>
+        </section>
+        <section class="contact">
+            <div class="col-5">
+
+            </div>
+            <div class="col-1">
+
+            </div>
         </section>
         <footer>
             <div class="container">
