--- a/agnecy.html
+++ b/agnecy.html
@@ -24,91 +24,105 @@
             </div>
         </header>
         <section class="about">
-            <div class="col-1">
-                <h1><b>OUR STRONG ORGANAISATION</b></h1>
-                <h6>Lorem ipsum dolor sit amet, consectetur adipis cing elit, set do eius-mod tempor incididunt ut labore et. ectetur adig ipis cing elit, sed do eiusmod tempor incididunt</h6>
-                <a href="#" class="button1">Contact Us</a>
+            <div class="container">
+                <div class="col-1">
+                    <h1><b>OUR STRONG ORGANAISATION</b></h1>
+                    <h6>Lorem ipsum dolor sit amet, consectetur adipis cing elit, set do eius-mod tempor incididunt ut labore et. ectetur adig ipis cing elit, sed do eiusmod tempor incididunt</h6>
+                    <a href="#" class="button1">Contact Us</a>
+                </div>
             </div>
         </section>
         <section class="service">
-            <div class="col-2">
-                <h1><b>DO YOU KNOW WE CAN PROVIDE FOR YOU?</b></h1>
-                <h6>Lorem ipsum dolor sit amet, consectetur adipis cing elit, set do eius-mod tempor incididunt ut labore et. ectetur adig ipis cing elit, sed do eiusmod tempor incididunt</h6>
-            </div>
-            <div class="col-1">
-                <img src="/afanasyev_official/images/icon-settings.png">
-                <h4>Management</h4>
-                <h6>Lorem ipsum dolor sit amet, consectetur adipis cing elit, set do eius-mod tempor incididunt ut labore et. ectetur adig ipis cing elit, sed do eiusmod tempor incididunt</h6>
-                <img src="/afanasyev_official/images/icon-diamond.png">
-                <h4>Logo / Branding</h4>
-                <h6>Lorem ipsum dolor sit amet, consectetur adipis cing elit, set do eius-mod tempor incididunt ut labore et. ectetur adig ipis cing elit, sed do eiusmod tempor incididunt</h6>
-            </div>
-            <div class="col-1">
-                <img src="/afanasyev_official/images/icon-pencil.png">
-                <h4>UI / UX Design</h4>
-                <h6>Lorem ipsum dolor sit amet, consectetur adipis cing elit, set do eius-mod tempor incididunt ut labore et. ectetur adig ipis cing elit, sed do eiusmod tempor incididunt</h6>
-                <img src="/afanasyev_official/images/icon-truck.png">
-                <h4>Animation</h4>
-                <h6>Lorem ipsum dolor sit amet, consectetur adipis cing elit, set do eius-mod tempor incididunt ut labore et. ectetur adig ipis cing elit, sed do eiusmod tempor incididunt</h6>
+            <div class="container">
+                <div class="col-2">
+                    <h1><b>DO YOU KNOW WE CAN PROVIDE FOR YOU?</b></h1>
+                    <h6>Lorem ipsum dolor sit amet, consectetur adipis cing elit, set do eius-mod tempor incididunt ut labore et. ectetur adig ipis cing elit, sed do eiusmod tempor incididunt</h6>
+                </div>
+                <div class="col-1">
+                    <img src="/afanasyev_official/images/icon-settings.png">
+                    <h4>Management</h4>
+                    <h6>Lorem ipsum dolor sit amet, consectetur adipis cing elit, set do eius-mod tempor incididunt ut labore et. ectetur adig ipis cing elit, sed do eiusmod tempor incididunt</h6>
+                    <img src="/afanasyev_official/images/icon-diamond.png">
+                    <h4>Logo / Branding</h4>
+                    <h6>Lorem ipsum dolor sit amet, consectetur adipis cing elit, set do eius-mod tempor incididunt ut labore et. ectetur adig ipis cing elit, sed do eiusmod tempor incididunt</h6>
+                </div>
+                <div class="col-1">
+                    <img src="/afanasyev_official/images/icon-pencil.png">
+                    <h4>UI / UX Design</h4>
+                    <h6>Lorem ipsum dolor sit amet, consectetur adipis cing elit, set do eius-mod tempor incididunt ut labore et. ectetur adig ipis cing elit, sed do eiusmod tempor incididunt</h6>
+                    <img src="/afanasyev_official/images/icon-truck.png">
+                    <h4>Animation</h4>
+                    <h6>Lorem ipsum dolor sit amet, consectetur adipis cing elit, set do eius-mod tempor incididunt ut labore et. ectetur adig ipis cing elit, sed do eiusmod tempor incididunt</h6>
+                </div>
             </div>
         </section>
         <section class="products">
-            <section class="prodtop">
-                <h1><b>FEATURE PRODUCTS</b></h1>
-                <h6>Lorem ipsum dolor sit amet, consectetur adipis cing elit, set do eius-mod tempor incididunt ut labore et.</h6>
-            </section>
-            <section class="prodmenu">
-                <nav>
-                    <ul class="row">
-                        <li class="all"><a href="#">ALL</a></li>
-                        <li><a href="#">PRINT TEMPLATE</a></li>
-                        <li><a href="#">WEB TEMPLATE</a></li>
-                        <li><a href="#">USER INTERFACE</a></li>
-                        <li><a href="#">MOCK-UP</a></li>
-                    </ul>
-                </nav>
-            </section>
+            <div class="container">
+                <section class="prodtop">
+                    <h1><b>FEATURE PRODUCTS</b></h1>
+                    <h6>Lorem ipsum dolor sit amet, consectetur adipis cing elit, set do eius-mod tempor incididunt ut labore et.</h6>
+                </section>
+                <section class="prodmenu">
+                    <nav>
+                        <ul class="row">
+                            <li class="all"><a href="#">ALL</a></li>
+                            <li><a href="#">PRINT TEMPLATE</a></li>
+                            <li><a href="#">WEB TEMPLATE</a></li>
+                            <li><a href="#">USER INTERFACE</a></li>
+                            <li><a href="#">MOCK-UP</a></li>
+                        </ul>
+                    </nav>
+                </section>
+            </div>
             <section class="prod">
-                <aside class="col-1">
-                    <img src="/afanasyev_official/images/block2.png">
-                    <img src="/afanasyev_official/images/block2.png">
-                </aside>
-                <aside class="col-1">
-                    <img src="/afanasyev_official/images/block2.png">
-                    <img src="/afanasyev_official/images/block2.png">
-                </aside>
-                <aside class="col-1">
-                    <img src="/afanasyev_official/images/block2.png">
-                    <img src="/afanasyev_official/images/block2.png">
-                </aside>
-                <aside class="col-1">
-                    <img src="/afanasyev_official/images/block2.png">
-                    <img src="/afanasyev_official/images/block2.png">
-                </aside>
+                <div class="container">
+                    <aside class="col-1">
+                        <img src="/afanasyev_official/images/block2.png">
+                        <img src="/afanasyev_official/images/block2.png">
+                    </aside>
+                    <aside class="col-1">
+                        <img src="/afanasyev_official/images/block2.png">
+                        <img src="/afanasyev_official/images/block2.png">
+                    </aside>
+                    <aside class="col-1">
+                        <img src="/afanasyev_official/images/block2.png">
+                        <img src="/afanasyev_official/images/block2.png">
+                    </aside>
+                    <aside class="col-1">
+                        <img src="/afanasyev_official/images/block2.png">
+                        <img src="/afanasyev_official/images/block2.png">
+                    </aside>
+                </div>
             </section>
         </section>
         <section class="team">
-            <div class="col-1">
+            <div class="container">
+                <div class="col-1">
 
-            </div>
-            <div class="col-2">
+                </div>
+                <div class="col-2">
 
+                </div>
             </div>
         </section>
         <section class="subscribe">
-            <div class="col-2">
+            <div class="container">
+                <div class="col-2">
 
-            </div>
-            <div class="col-4">
+                </div>
+                <div class="col-4">
 
+                </div>
             </div>
         </section>
         <section class="contact">
-            <div class="col-5">
+            <div class="container">
+                <div class="col-5">
 
-            </div>
-            <div class="col-1">
+                </div>
+                <div class="col-1">
 
+                </div>
             </div>
         </section>
         <footer>
