--- a/agnecy.html
+++ b/agnecy.html
@@ -30,6 +30,9 @@
                     <h6>Lorem ipsum dolor sit amet, consectetur adipis cing elit, set do eius-mod tempor incididunt ut labore et. ectetur adig ipis cing elit, sed do eiusmod tempor incididunt</h6>
                     <a href="#" class="button1">Contact Us</a>
                 </div>
+                <div class="col-1">
+                    <img src="/afanasyev_official/images/block-video.png">
+                </div>
             </div>
         </section>
         <section class="service">
