--- a/agnecy.html
+++ b/agnecy.html
@@ -28,7 +28,7 @@
                 <div class="col-1">
                     <h1><b>OUR STRONG ORGANAISATION</b></h1>
                     <h6>Lorem ipsum dolor sit amet, consectetur adipis cing elit, set do eius-mod tempor incididunt ut labore et. ectetur adig ipis cing elit, sed do eiusmod tempor incididunt</h6>
-                    <a href="#" class="button1">Contact Us</a>
+                    <a href="#" class="button">Contact Us</a>
                 </div>
                 <div class="col-1">
                     <img src="/afanasyev_official/images/block-video.png">
