--- a/agnecy.html
+++ b/agnecy.html
@@ -60,12 +60,12 @@
             </div>
         </section>
         <section class="products">
-            <div class="container">
-                <section class="prodtop">
+            <div class="container" class="column">
+                <div class="prodtop">
                     <h1><b>FEATURE PRODUCTS</b></h1>
                     <h6>Lorem ipsum dolor sit amet, consectetur adipis cing elit, set do eius-mod tempor incididunt ut labore et.</h6>
-                </section>
-                <section class="prodmenu">
+                </div>
+                <div class="prodmenu">
                     <nav>
                         <ul class="row">
                             <li class="all"><a href="#">ALL</a></li>
@@ -75,28 +75,26 @@
                             <li><a href="#">MOCK-UP</a></li>
                         </ul>
                     </nav>
-                </section>
-            </div>
-            <section class="prod">
-                <div class="container">
-                    <aside class="col-1">
-                        <img src="/afanasyev_official/images/block2.png">
-                        <img src="/afanasyev_official/images/block2.png">
-                    </aside>
-                    <aside class="col-1">
-                        <img src="/afanasyev_official/images/block2.png">
-                        <img src="/afanasyev_official/images/block2.png">
-                    </aside>
-                    <aside class="col-1">
-                        <img src="/afanasyev_official/images/block2.png">
-                        <img src="/afanasyev_official/images/block2.png">
-                    </aside>
-                    <aside class="col-1">
-                        <img src="/afanasyev_official/images/block2.png">
-                        <img src="/afanasyev_official/images/block2.png">
-                    </aside>
                 </div>
-            </section>
+            </div>
+            <div class="prod">
+                <aside class="col-1">
+                    <img src="/afanasyev_official/images/block2.png">
+                    <img src="/afanasyev_official/images/block2.png">
+                </aside>
+                <aside class="col-1">
+                    <img src="/afanasyev_official/images/block2.png">
+                    <img src="/afanasyev_official/images/block2.png">
+                </aside>
+                <aside class="col-1">
+                    <img src="/afanasyev_official/images/block2.png">
+                    <img src="/afanasyev_official/images/block2.png">
+                </aside>
+                <aside class="col-1">
+                    <img src="/afanasyev_official/images/block2.png">
+                    <img src="/afanasyev_official/images/block2.png">
+                </aside>
+            </div>
         </section>
         <section class="team">
             <div class="container">
