--- a/agnecy.html
+++ b/agnecy.html
@@ -60,7 +60,7 @@
             </div>
         </section>
         <section class="products">
-            <div class="container" class="column">
+            <div class="container" class="column" class="row">
                 <div class="prodtop">
                     <h1><b>FEATURE PRODUCTS</b></h1>
                     <h6>Lorem ipsum dolor sit amet, consectetur adipis cing elit, set do eius-mod tempor incididunt ut labore et.</h6>
