--- a/agnecy.html
+++ b/agnecy.html
@@ -78,18 +78,18 @@
                 </div>
             </div>
             <div class="prod">
-                <aside class="col-1">
+                <div class="col-1">
                     <img src="/afanasyev_official/images/block2.png">
                     <img src="/afanasyev_official/images/block2.png">
                     <img src="/afanasyev_official/images/block2.png">
                     <img src="/afanasyev_official/images/block2.png">
-                </aside>
-                <aside class="col-1">
+                </div>
+                <div class="col-1">
                     <img src="/afanasyev_official/images/block2.png">
                     <img src="/afanasyev_official/images/block2.png">
                     <img src="/afanasyev_official/images/block2.png">
                     <img src="/afanasyev_official/images/block2.png">
-                </aside>
+                </div>
             </div>
         </section>
         <section class="team">
