--- a/agnecy.html
+++ b/agnecy.html
@@ -65,7 +65,7 @@
                     <h1><b>FEATURE PRODUCTS</b></h1>
                     <h6>Lorem ipsum dolor sit amet, consectetur adipis cing elit, set do eius-mod tempor incididunt ut labore et.</h6>
                 </div>
-                <div class="prodmenu">
+                <div class="prodmenu" class="column">
                     <nav>
                         <ul class="row">
                             <li class="all"><a href="#">ALL</a></li>
