--- a/agnecy.html
+++ b/agnecy.html
@@ -60,12 +60,12 @@
             </div>
         </section>
         <section class="products">
-            <div class="container" class="column" class="row">
+            <div class="container column row">
                 <div class="prodtop">
                     <h1><b>FEATURE PRODUCTS</b></h1>
                     <h6>Lorem ipsum dolor sit amet, consectetur adipis cing elit, set do eius-mod tempor incididunt ut labore et.</h6>
                 </div>
-                <div class="prodmenu" class="column">
+                <div class="prodmenu">
                     <nav>
                         <ul class="row">
                             <li class="all"><a href="#">ALL</a></li>
