--- a/agnecy.html
+++ b/agnecy.html
@@ -68,7 +68,7 @@
                 <div class="prodmenu">
                     <nav>
                         <ul class="row">
-                            <li class="all"><a href="#">ALL</a></li>
+                            <li class="active"><a href="#">ALL</a></li>
                             <li><a href="#">PRINT TEMPLATE</a></li>
                             <li><a href="#">WEB TEMPLATE</a></li>
                             <li><a href="#">USER INTERFACE</a></li>
