--- a/agnecy.html
+++ b/agnecy.html
@@ -76,19 +76,19 @@
                         </ul>
                     </nav>
                 </div>
-            </div>
-            <div class="prod">
-                <div class="col-1">
-                    <img src="/afanasyev_official/images/block2.png">
-                    <img src="/afanasyev_official/images/block2.png">
-                    <img src="/afanasyev_official/images/block2.png">
-                    <img src="/afanasyev_official/images/block2.png">
-                </div>
-                <div class="col-1">
-                    <img src="/afanasyev_official/images/block2.png">
-                    <img src="/afanasyev_official/images/block2.png">
-                    <img src="/afanasyev_official/images/block2.png">
-                    <img src="/afanasyev_official/images/block2.png">
+                <div class="prod">
+                    <div class="col-1 row">
+                        <img src="/afanasyev_official/images/block2.png">
+                        <img src="/afanasyev_official/images/block2.png">
+                        <img src="/afanasyev_official/images/block2.png">
+                        <img src="/afanasyev_official/images/block2.png">
+                    </div>
+                    <div class="col-1 row">
+                        <img src="/afanasyev_official/images/block2.png">
+                        <img src="/afanasyev_official/images/block2.png">
+                        <img src="/afanasyev_official/images/block2.png">
+                        <img src="/afanasyev_official/images/block2.png">
+                    </div>
                 </div>
             </div>
         </section>
