--- a/agnecy.html
+++ b/agnecy.html
@@ -94,11 +94,40 @@
         </section>
         <section class="team">
             <div class="container">
-                <div class="col-1">
-
+                <div class="conttop">
+                    <div class="col-2">
+                        <h1><b>MEET OUR TEAM</b></h1>
+                        <h6>Lorem ipsum dolor sit amet, consectetur adipis cing elit, set do eius-mod tempor incididunt ut labore et.</h6>
+                    </div>
+                    <div class="col-2">
+                    </div>
                 </div>
-                <div class="col-2">
-
+                <div class="contfoto">
+                    <div class="col-1">
+                        <img src="/afanasyev_official/images/block1.png">
+                    </div>
+                    <div class="col-3">
+                        <div class="fototext">
+                            <div class="col-3">
+                                <h2>MARK WAUGH</h2>
+                                <h6>Lorem ipsum dolor sit amet, consectetur adipis cing elit, set do eius-mod tempor incididunt ut labore et.</h6>
+                            </div>
+                        </div>
+                        <div class="foto">
+                            <div class="col-1">
+                                <img src="/afanasyev_official/images/block2.png">
+                            </div>
+                            <div class="col-1">
+                                <img src="/afanasyev_official/images/block2.png">
+                            </div>
+                            <div class="col-1">
+                                <img src="/afanasyev_official/images/block2.png">
+                            </div>
+                            <div class="col-1">
+                                <img src="/afanasyev_official/images/block2.png">
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
@@ -112,7 +141,7 @@
                 </div>
             </div>
         </section>
-        <section class="contact">
+        <section class="contacts">
             <div class="container">
                 <div class="col-5">
 
