--- a/agnecy.html
+++ b/agnecy.html
@@ -94,14 +94,20 @@
         </section>
         <section class="team">
             <div class="container">
-                <div class="col-2">
-                    <h1><b>MEET OUR TEAM</b></h1>
-                    <h6>Lorem ipsum dolor sit amet, consectetur adipis cing elit, set do eius-mod tempor incididunt ut labore et.</h6>
-                    <img src="/afanasyev_official/images/block1.png">
+                <div class="teamtop">
+                    <div class="col-2">
+                        <h1><b>MEET OUR TEAM</b></h1>
+                        <h6>Lorem ipsum dolor sit amet, consectetur adipis cing elit, set do eius-mod tempor incididunt ut labore et.</h6>
+                    </div>
                 </div>
-                <div class="col-3">
-                    <h2>MARK WAUGH</h2>
-                    <h6>Lorem ipsum dolor sit amet, consectetur adipis cing elit, set do eius-mod tempor incididunt ut labore et.</h6>
+                <div class="foto">
+                    <div class="col-2">
+                        <img src="/afanasyev_official/images/block1.png">
+                    </div>
+                    <div class="col-3 fototext">
+                        <h2>MARK WAUGH</h2>
+                        <h6>Lorem ipsum dolor sit amet, consectetur adipis cing elit, set do eius-mod tempor incididunt ut labore et.</h6>
+                    </div>
                 </div>
             </div>
         </section>
